- added "uc3m_ml_healthcare/generate_timeseries.py" - 10_data.ipynb     - more content

--- a/nbs/10_data.ipynb
+++ b/nbs/10_data.ipynb
@@ -38,60 +38,25 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "import pathlib\n",
-    "import itertools\n",
+    "# import pathlib\n",
+    "# import itertools\n",
+    "import types\n",
     "\n",
     "from fastcore.utils import patch\n",
     "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
     "import torch\n",
     "import torch.distributions\n",
+    "from torch.distributions import uniform\n",
     "\n",
-    "# from latent_ode.generate_timeseries import Periodic_1d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02b138b6-14fa-430b-a6b8-878b3c336111",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def make_periodic_dataset(**kwargs) -> tuple[torch.Tensor, torch.Tensor]:\n",
-    "    \n",
-    "    # so that we can use the original code \"verbatim\" (plus some comments)\n",
-    "    args = types.SimpleNamespace(**kwargs)\n",
-    "    \n",
-    "    # ---------\n",
-    "\n",
-    "    n_total_tp = args.timepoints + args.extrap\n",
-    "\n",
-    "    # better understood as max_t_extrap = n_total_tp / args.timepoints * args.max_t (you adjust `max_t` if extrapolation is requested)\n",
-    "    # if `args.extrap` is `False`, then this is exactly equal to `n_total_tp` since `n_total_tp = args.timepoints`\n",
-    "    max_t_extrap = args.max_t / args.timepoints * n_total_tp\n",
-    "\n",
-    "    distribution = uniform.Uniform(torch.Tensor([0.0]),torch.Tensor([max_t_extrap]))\n",
-    "    time_steps_extrap =  distribution.sample(torch.Size([n_total_tp-1]))[:,0] # last part is just \"squeezing\"\n",
-    "    time_steps_extrap = torch.cat((torch.Tensor([0.0]), time_steps_extrap)) # 0 is always there\n",
-    "    time_steps_extrap = torch.sort(time_steps_extrap)[0]\n",
-    "\n",
-    "    dataset_obj = Periodic_1d( # frequencies are not passed (and henced sampled internally)\n",
-    "        init_freq = None, init_amplitude = 1.,\n",
-    "        final_amplitude = 1., final_freq = None, \n",
-    "        z0 = 1.)\n",
-    "\n",
-    "    dataset = dataset_obj.sample_traj(time_steps_extrap, n_samples = args.n, noise_weight = args.noise_weight)\n",
-    "    \n",
-    "    # ---------\n",
-    "    \n",
-    "    return time_steps_extrap, dataset"
+    "# from latent_ode.generate_timeseries import Periodic_1d\n",
+    "from uc3m_ml_healthcare.generate_timeseries import Periodic_1d"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8fa171aa-6e78-4457-bede-da7a36490e1e",
+   "id": "5c25eeb7-0ab0-4703-81b2-fa9865bf77fe",
    "metadata": {},
    "source": [
     "These `import`s are not actually required by this module but only used in tests."
@@ -109,11 +74,101 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57143e3c-a58c-4c7a-ac22-82f7d8198048",
+   "id": "bac9dfb6-f8aa-4251-b9b7-4caa7a9c6a2d",
    "metadata": {},
    "source": [
-    "**<font color=\"red\">TODO</font>**\n",
-    "- drop time instants with no data (`get_next_batch` in Rubanova's code)"
+    "## Synthetic data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e54d4b1-f375-4993-afa0-2f8f04a1c87d",
+   "metadata": {},
+   "source": [
+    "Except for the first and last lines, everything else comes from [Rubanova's implementation](https://github.com/YuliaRubanova/latent_ode/blob/c0682d4f52b806fb88d965755892eadd9783f936/lib/parse_datasets.py) (comments mine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02b138b6-14fa-430b-a6b8-878b3c336111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def make_periodic_dataset(\n",
+    "    timepoints: int, # Number of time instants\n",
+    "    extrap: bool, # Whether extrapolation is peformed\n",
+    "    max_t: float, # Maximum value of time instants\n",
+    "    n: int, # Number of examples\n",
+    "    noise_weight: float # Standard deviation of the noise to be added\n",
+    ") -> tuple[torch.Tensor, torch.Tensor]: # Time and observations\n",
+    "    \n",
+    "    # so that we can use the original code \"verbatim\" (plus some comments)\n",
+    "    args = types.SimpleNamespace(timepoints=timepoints, extrap=extrap, max_t=max_t, n=n, noise_weight=noise_weight)\n",
+    "    \n",
+    "    # --------- Rubanova (see above)\n",
+    "\n",
+    "    n_total_tp = args.timepoints + args.extrap\n",
+    "\n",
+    "    # better understood as max_t_extrap = n_total_tp / args.timepoints * args.max_t (you adjust `max_t` if extrapolation is requested)\n",
+    "    # if `args.extrap` is `False`, then this is exactly equal to `n_total_tp` since `n_total_tp = args.timepoints`\n",
+    "    max_t_extrap = args.max_t / args.timepoints * n_total_tp\n",
+    "\n",
+    "    distribution = uniform.Uniform(torch.Tensor([0.0]),torch.Tensor([max_t_extrap]))\n",
+    "    time_steps_extrap =  distribution.sample(torch.Size([n_total_tp-1]))[:,0] # last part is just \"squeezing\"\n",
+    "    time_steps_extrap = torch.cat((torch.Tensor([0.0]), time_steps_extrap)) # 0 is always there\n",
+    "    time_steps_extrap = torch.sort(time_steps_extrap)[0]\n",
+    "\n",
+    "    # frequencies are not passed (and henced sampled internally)\n",
+    "    dataset_obj = Periodic_1d(\n",
+    "        init_freq = None, init_amplitude = 1.,\n",
+    "        final_amplitude = 1., final_freq = None, \n",
+    "        z0 = 1.)\n",
+    "\n",
+    "    dataset = dataset_obj.sample_traj(time_steps_extrap, n_samples = args.n, noise_weight = args.noise_weight)\n",
+    "    \n",
+    "    # ---------\n",
+    "    \n",
+    "    return time_steps_extrap, dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "760c18f4-27dc-48e3-aded-ecd0c39ffae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([101]), torch.Size([200, 101, 1]))"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time, observations = make_periodic_dataset(timepoints=100, extrap=True, max_t=5.0, n=200, noise_weight=0.01)\n",
+    "time.shape, observations.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d95e57dc-272c-401a-93d9-51bb2dafdf43",
+   "metadata": {},
+   "source": [
+    "## PyTorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7356b6f8-6fe3-4c1a-bfe2-a6ff4cb24060",
+   "metadata": {},
+   "source": [
+    "A class defining a (somehow complex) PyTorch [DataLoader](https://pytorch.org/docs/stable/data.html#torch.utils.data.DataLoader)"
    ]
   },
   {
@@ -123,6 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "class CollateFunction:\n",
     "    \n",
     "    def __init__(self,\n",
@@ -138,7 +194,7 @@
     "        \n",
     "    def __call__(self,\n",
     "                 batch: list # Observations [batch]\n",
-    "                ):\n",
+    "                ) -> dict:\n",
     "        \n",
     "        # [batch, time, feature]\n",
     "        batch = torch.stack(batch)\n",
@@ -192,14 +248,280 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce8597b8-fa83-43c8-8683-b9a63c1a62b6",
+   "metadata": {},
+   "source": [
+    "**<font color=\"red\">TODO</font>**\n",
+    "\n",
+    "- drop time instants with no data (`get_next_batch` in Rubanova's code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c6e9d71-4779-4f66-a912-cf0b6cee270a",
+   "metadata": {},
+   "source": [
+    "Let us build an object for testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e4770eb-d523-4332-b2ef-6b29bf658f5f",
+   "id": "76fa453c-6fac-4b24-bdbe-31889506c182",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collate function expecting 101 time instants, subsampling 50."
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collate_fn = CollateFunction(time, n_points_to_subsample=50)\n",
+    "collate_fn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "800ed7d2-f4f3-43c8-b3ba-79beb8d1dba8",
+   "metadata": {},
+   "source": [
+    "We also need a PyTorch `DataLoader`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ab193d4-5914-4057-a375-74c386b496a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch.utils.data.dataloader.DataLoader>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataloader = torch.utils.data.DataLoader(observations, batch_size = 10, shuffle=False, collate_fn=collate_fn)\n",
+    "dataloader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1cb5432-d99d-4a99-93cc-480a13730cf8",
+   "metadata": {},
+   "source": [
+    "How many batches is this `DataLoader` providing?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5b0439c-d0cd-430e-b042-d11c73a7dee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_batches = len(dataloader)\n",
+    "n_batches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8071eec-49cb-48ed-9967-7e2de8e23eeb",
+   "metadata": {},
+   "source": [
+    "Let us get the first batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88bc6b2c-712b-488d-8b81-138ac4735e7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_bundle = next(iter(dataloader))\n",
+    "type(batch_bundle)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69c3c6b9-cd85-45e6-ad81-cf4d896cdeaf",
+   "metadata": {},
+   "source": [
+    "Notice that, as seen from `CollateFunction.__call__` function's prototype, the type is returned is a dictionary. It contains the following fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fde12f7-8979-4be1-9a53-b263e9acc10f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['observed_time', 'observed_data', 'to_predict_at_time', 'to_predict_data', 'observed_mask'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(batch_bundle.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1ea9495-d105-4f61-ab46-eac3345043dd",
+   "metadata": {},
+   "source": [
+    "- `observed_time` and `observed_data` is the **first part** of a time series we want to learn, whereas\n",
+    "- `to_predict_at_time`, `to_predict_data` is the **second part** of the *same* time series we aim at predicting; on the other hand\n",
+    "- `observed_mask` is `True` for every observation that is available (it only applies to the *observed* data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e3c5df1-bfa1-4cf4-820a-f811250b0890",
+   "metadata": {},
+   "source": [
+    "We can check the size of every component"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cceaad5-4bdc-4a14-a8b3-0a97d7f5ae2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensions of observed_time: (50,)\n",
+      "Dimensions of observed_data: (10, 50, 1)\n",
+      "Dimensions of to_predict_at_time: (51,)\n",
+      "Dimensions of to_predict_data: (10, 51, 1)\n",
+      "Dimensions of observed_mask: (10, 50, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in batch_bundle.items():\n",
+    "    print(f'Dimensions of {k}: {tuple(v.shape)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8e87cad-1647-4f86-bc56-ed9a4a28e49e",
+   "metadata": {},
+   "source": [
+    "In this simple example, every observatios is available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ca178dc-19c9-46f6-8143-14c4c77bf6e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(True)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(batch_bundle['observed_mask'] == 1.).all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1edf7a6b-9a9e-4fe1-a6b4-0a8213ad1a0f",
+   "metadata": {},
+   "source": [
+    "### GPU support"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60d2dd9b-7edf-4b30-a44b-aee526b14c06",
+   "metadata": {},
+   "source": [
+    "If one wants to *move* this object to another device, this function will do that for all the relevant internal state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0b28a12-f6bb-4ad1-b1ec-9b69487bf162",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#|hide\n",
-    "from nbdev.doclinks import nbdev_export\n",
+    "#| export\n",
+    "@patch\n",
+    "def to(self: CollateFunction, device):\n",
+    "    \n",
+    "    self.time = self.time.to(device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc48b386-dc36-4c7c-b580-9cb4f7d92808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from nbdev.doclinks import nbdev_export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cffcf61-50c9-41fd-a47a-04e44ca8f157",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
     "nbdev_export('10_data.ipynb')"
    ]
   }
