--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# uc3m_ml_healthcare\n",
     "\n",
-    "> Machine Learning in Healthcare Course"
+    "> \"Machine Learning in Healthcare\" Course"
    ]
   },
   {
@@ -24,6 +24,17 @@
    "metadata": {},
    "source": [
     "This file will become your README and also the index of your documentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The library includes two files from [Rubanova's implementation](https://github.com/YuliaRubanova/latent_ode) of the paper [Latent ODEs for Irregularly-Sampled Time Series](https://arxiv.org/abs/1907.03907):\n",
+    "\n",
+    "- [generate_timeseries.py](uc3m_ml_healthcare/generate_timeseries.py)\n",
+    "\n",
+    "    - commented out the *unnecessary* line `import lib.utils as utils`"
    ]
   },
   {
@@ -75,13 +86,6 @@
    "source": [
     "1+1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
