- 10_data.ipynb     - CollateFunction         - no need to pass `n_points_to_subsample` - generate_timeseries.py     - commented out matplotlib stuff

--- a/nbs/10_data.ipynb
+++ b/nbs/10_data.ipynb
@@ -168,7 +168,7 @@
    "id": "7356b6f8-6fe3-4c1a-bfe2-a6ff4cb24060",
    "metadata": {},
    "source": [
-    "A class defining a (somehow complex) PyTorch [DataLoader](https://pytorch.org/docs/stable/data.html#torch.utils.data.DataLoader)"
+    "A class defining a (somehow complex) *collate function* for a PyTorch [DataLoader](https://pytorch.org/docs/stable/data.html#torch.utils.data.DataLoader)"
    ]
   },
   {
@@ -183,14 +183,18 @@
     "    \n",
     "    def __init__(self,\n",
     "                 time: torch.Tensor, # Time axis [time]\n",
-    "                 n_points_to_subsample: int # Number of points to be \"subsampled\"\n",
+    "                 n_points_to_subsample: int | None = None # Number of points to be \"subsampled\"\n",
     "                ):\n",
     "        \n",
     "        self.time = time\n",
-    "        self.n_points_to_subsample = n_points_to_subsample\n",
     "        \n",
     "        self._n_time_instants = len(time)\n",
     "        self._half_n_time_instants: int = self._n_time_instants // 2\n",
+    "        \n",
+    "        if n_points_to_subsample is None:\n",
+    "            self.n_points_to_subsample = self._half_n_time_instants\n",
+    "        else:\n",
+    "            self.n_points_to_subsample = n_points_to_subsample\n",
     "        \n",
     "    def __call__(self,\n",
     "                 batch: list # Observations [batch]\n",
@@ -411,6 +415,14 @@
     "- `observed_time` and `observed_data` is the **first part** of a time series we want to learn, whereas\n",
     "- `to_predict_at_time`, `to_predict_data` is the **second part** of the *same* time series we aim at predicting; on the other hand\n",
     "- `observed_mask` is `True` for every observation that is available (it only applies to the *observed* data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deba36b5-dcd6-4bef-ba72-5cc6091e5016",
+   "metadata": {},
+   "source": [
+    "If one must think of this in terms of an input, $x$, that is given, and a related output, $y$, that is to be predicted, the latter would be `to_predict_data` and the former would encompass the rest of the fields."
    ]
   },
   {
