--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -30,11 +30,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The library includes two files from [Rubanova's implementation](https://github.com/YuliaRubanova/latent_ode) of the paper [Latent ODEs for Irregularly-Sampled Time Series](https://arxiv.org/abs/1907.03907):\n",
+    "The library includes the file [generate_timeseries.py](uc3m_ml_healthcare/generate_timeseries.py) from [Rubanova's implementation](https://github.com/YuliaRubanova/latent_ode) of the paper [Latent ODEs for Irregularly-Sampled Time Series](https://arxiv.org/abs/1907.03907) with two minor modifications:\n",
     "\n",
-    "- [generate_timeseries.py](uc3m_ml_healthcare/generate_timeseries.py)\n",
+    "- commented out the *unnecessary* line `import lib.utils as utils`\n",
     "\n",
-    "    - commented out the *unnecessary* line `import lib.utils as utils`"
+    "- commented out all the *matplotlib* stuff"
    ]
   },
   {
