- added "30_train.ipynb"

--- a/nbs/20_plot.ipynb
+++ b/nbs/20_plot.ipynb
@@ -26,7 +26,7 @@
    "id": "2f897a80-a902-4f8b-a178-332d8d97b75c",
    "metadata": {},
    "source": [
-    "# Plot\n",
+    "# plot\n",
     "> Plotting functionality"
    ]
   },
