--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -23,16 +23,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "This library gathers some Python code meant to be used in the labs to be worked in Universidad Carlos III de Madrid [Machine Learning in Healthcare](https://aplicaciones.uc3m.es/cpa/generaFicha?est=350&asig=16803&idioma=2&anio=2022) course."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The library includes the file [generate_timeseries.py](uc3m_ml_healthcare/generate_timeseries.py) from [Rubanova's implementation](https://github.com/YuliaRubanova/latent_ode) of the paper [Latent ODEs for Irregularly-Sampled Time Series](https://arxiv.org/abs/1907.03907) with two minor modifications:\n",
+    "It includes the file [generate_timeseries.py](uc3m_ml_healthcare/generate_timeseries.py) from [Rubanova's implementation](https://github.com/YuliaRubanova/latent_ode) of the paper [Latent ODEs for Irregularly-Sampled Time Series](https://arxiv.org/abs/1907.03907) with two minor modifications:\n",
     "\n",
-    "- commented out the *unnecessary* line `import lib.utils as utils`\n",
+    "- commented out the unnecessary line `import lib.utils as utils`\n",
     "\n",
     "- commented out all the *matplotlib* stuff"
    ]
@@ -48,43 +48,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The package is not in [PyPI](https://pypi.org) but this should do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```sh\n",
-    "pip install uc3m_ml_healthcare\n",
+    "pip install git+https://github.com/manuvazquez/uc3m_ml_healthcare@main\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## How to use"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
    ]
   }
  ],
