- minimum Python version set to 3.7     - 10_data.ipynb, 30_train.ipynb     - .github/workflows/test.yaml         - changed accordingly

--- a/nbs/10_data.ipynb
+++ b/nbs/10_data.ipynb
@@ -26,7 +26,7 @@
    "id": "5472b326-73a3-497b-abe1-4112c70fa1e6",
    "metadata": {},
    "source": [
-    "# Data\n",
+    "# data\n",
     "> Data reading and wrangling functionality"
    ]
   },
@@ -38,14 +38,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# import pathlib\n",
-    "# import itertools\n",
     "import types\n",
     "\n",
     "from fastcore.utils import patch\n",
     "\n",
-    "# import pandas as pd\n",
-    "# import numpy as np\n",
     "import torch\n",
     "import torch.distributions\n",
     "from torch.distributions import uniform\n",
@@ -69,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import ricardo.plot"
+    "# import"
    ]
   },
   {
@@ -102,7 +98,8 @@
     "    max_t: float, # Maximum value of time instants\n",
     "    n: int, # Number of examples\n",
     "    noise_weight: float # Standard deviation of the noise to be added\n",
-    ") -> tuple[torch.Tensor, torch.Tensor]: # Time and observations\n",
+    "): # Time and observations\n",
+    "# ) -> tuple[torch.Tensor, torch.Tensor]: # Time and observations # <-------------- Python 3.10\n",
     "    \n",
     "    # so that we can use the original code \"verbatim\" (plus some comments)\n",
     "    args = types.SimpleNamespace(timepoints=timepoints, extrap=extrap, max_t=max_t, n=n, noise_weight=noise_weight)\n",
@@ -183,7 +180,8 @@
     "    \n",
     "    def __init__(self,\n",
     "                 time: torch.Tensor, # Time axis [time]\n",
-    "                 n_points_to_subsample: int | None = None # Number of points to be \"subsampled\"\n",
+    "                 # n_points_to_subsample: int | None = None # Number of points to be \"subsampled\" # <-------------- Python 3.10\n",
+    "                 n_points_to_subsample = None # Number of points to be \"subsampled\"\n",
     "                ):\n",
     "        \n",
     "        self.time = time\n",
@@ -195,6 +193,9 @@
     "            self.n_points_to_subsample = self._half_n_time_instants\n",
     "        else:\n",
     "            self.n_points_to_subsample = n_points_to_subsample\n",
+    "            \n",
+    "    \n",
+    "    # TODO: drop time instants with no data (`get_next_batch` in Rubanova's code)\n",
     "        \n",
     "    def __call__(self,\n",
     "                 batch: list # Observations [batch]\n",
@@ -249,16 +250,6 @@
     "    def to(self, device):\n",
     "        \n",
     "        self.time = self.time.to(device=device)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce8597b8-fa83-43c8-8683-b9a63c1a62b6",
-   "metadata": {},
-   "source": [
-    "**<font color=\"red\">TODO</font>**\n",
-    "\n",
-    "- drop time instants with no data (`get_next_batch` in Rubanova's code)"
    ]
   },
   {
