--- a/nbs/30_train.ipynb
+++ b/nbs/30_train.ipynb
@@ -86,7 +86,8 @@
     "        target: torch.Tensor, # Targets [batch, time, feature]\n",
     "        target_mask: torch.BoolTensor, # Targets [batch, time, feature]\n",
     "        kl_weight: float # KL divergence weight on the loss\n",
-    "    ) -> tuple[torch.Tensor, dict]: # Loss and some extra info\n",
+    "    # ) -> tuple[torch.Tensor, dict]: # Loss and some extra info # <-------------- Python 3.10\n",
+    "    ): # Loss and some extra info\n",
     "\n",
     "\n",
     "        # -------------- KL divergence\n",
