- deleted 00_core.ipynb - minor improvements - added "environment.yml"

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from uc3m_ml_healthcare.core import *"
+    "# from uc3m_ml_healthcare.core import *"
    ]
   },
   {
