--- a/nbs/30_train.ipynb
+++ b/nbs/30_train.ipynb
@@ -48,7 +48,9 @@
    "metadata": {},
    "source": [
     "A loss function meant to be used with [Latent ODEs for Irregularly-Sampled Time Series](https://github.com/YuliaRubanova/latent_ode)'s `LatentODE`. Some modifications were applied:\n",
+    "\n",
     "- a mask is required since the sparse observations are supported\n",
+    "\n",
     "- likelihood is averaged over all the trials (rather than added across)"
    ]
   },
@@ -133,7 +135,7 @@
    "id": "a15c8300-dc9f-4024-b784-989ddd40530f",
    "metadata": {},
    "source": [
-    "The parameters required to.."
+    "We need the prior distribution, on one hand, and the standard deviation of the noise, on the other,..."
    ]
   },
   {
@@ -141,7 +143,19 @@
    "execution_count": null,
    "id": "f890bad4-46bc-4943-b27a-b0375516dd07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m prior \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39mdistributions\u001b[38;5;241m.\u001b[39mnormal\u001b[38;5;241m.\u001b[39mNormal(torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;241m0.0\u001b[39m), torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;241m1.\u001b[39m))\n\u001b[1;32m      2\u001b[0m noise_std \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(\u001b[38;5;241m0.01\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
    "source": [
     "prior = torch.distributions.normal.Normal(torch.tensor(0.0), torch.tensor(1.))\n",
     "noise_std = torch.tensor(0.01)"
@@ -152,7 +166,7 @@
    "id": "26e2d238-a097-442e-a6f8-cf88eab1d011",
    "metadata": {},
    "source": [
-    "...instantiate the class"
+    "...to instantiate the class"
    ]
   },
   {
