--- a/nbs/10_data.ipynb
+++ b/nbs/10_data.ipynb
@@ -224,7 +224,8 @@
     "        \n",
     "    def __str__(self):\n",
     "        \n",
-    "        return f'Collate function expecting {self._n_time_instants} time instants, subsampling {self.n_points_to_subsample}.'\n",
+    "        return f'Collate function expecting time series of length {self._n_time_instants}, with the second half to be predicted from the first.'\n",
+    "        # return f'Collate function expecting {self._n_time_instants} time instants, subsampling {self.n_points_to_subsample}.'\n",
     "    \n",
     "    # a object is represented by its string\n",
     "    __repr__ = __str__\n",
@@ -251,7 +252,7 @@
     {
      "data": {
       "text/plain": [
-       "Collate function expecting 101 time instants, subsampling 50."
+       "Collate function expecting time series of length 101, with the second half to be predicted from the first."
       ]
      },
      "execution_count": null,
